--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-// stylin
-
-
-* 		{ -webkit-font-smoothing: antialiased; }
-body 	{  }
+* {
+  -webkit-font-smoothing: antialiased;
+}
+body {
+  background: #f2f2f2;
+}
+body h1 {
+  color: red;
+}
