changed red h1 and gret background

--- a/style.less
+++ b/style.less
@@ -2,8 +2,8 @@
 
 * 		{ -webkit-font-smoothing: antialiased; }
 
-body { background: #f2f2f2;
+body { background: #fff;
 
-	h1 { color:red; }
+	h1 {  }
 
 }
