--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@
 body {
   background: #fff;
 }
+body header a#logo {
+  background: #333333 url('../assets/aok.svg') no-repeat;
+  display: block;
+  width: 40px;
+  height: 40px;
+}
