--- a/style.less
+++ b/style.less
@@ -4,6 +4,12 @@
 
 body { background: #fff;
 
+	header { 
+
+		a#logo { background: #333 url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; }
+
+	}
+
 	h1 {  }
 
 }
