--- a/style.less
+++ b/style.less
@@ -6,7 +6,7 @@ body { background: #fff;
 
 	header { 
 
-		a#logo { background: #333 url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; }
+		a#logo { background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 
 	}
 
