--- a/style.less
+++ b/style.less
@@ -1,8 +1,14 @@
-// Notes
+/* Notes
+
+RooneyWeb-Light
+RooneyWeb-LightItalic
+RooneyWeb-Regular
+RooneyWeb-RegularItalic
+*/
 
 * 		{ -webkit-font-smoothing: antialiased; }
 
-body { background: #fff;
+body { background: #fff; font:1.5em/2em "RooneyWeb-Light", Georgia, serif;
 
 	header { 
 
