added adele sans

--- a/style.less
+++ b/style.less
@@ -19,6 +19,6 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif;
 	a { color:#000; }
 
 
-	h1 {  }
+	h1 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 }
