--- a/style.less
+++ b/style.less
@@ -57,7 +57,9 @@ RooneyWeb-RegularItalic
 
 * 		{ -webkit-font-smoothing: antialiased; }
 
-body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif;
+body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:#FF5252;
+
+#wrap { width:1200px; margin: 0 auto; 
 
 	header { 
 
@@ -66,8 +68,10 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif;
 	}
 
 	a { color:#000; }
-
+	i { font:1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif; }
 
 	h1 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
+
+}
 
 }
