--- a/style.less
+++ b/style.less
@@ -55,22 +55,22 @@ RooneyWeb-Regular
 RooneyWeb-RegularItalic
 */
 
-* 		{ -webkit-font-smoothing: antialiased; }
+* 		{ -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-font-smoothing: antialiased; }
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:#FF5252;
 
 #wrap { width:1200px; margin: 0 auto; 
 
 	header { 
-
-		a#logo { background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
-
+		a#logo { position:fixed; padding: 100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
+
+	// Globular
 	a { color:#000; }
 	i { font:1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif; }
+	h1, h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
-	h1 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 }
 
