--- a/style.css
+++ b/style.css
@@ -134,6 +134,9 @@ RooneyWeb-Regular
 RooneyWeb-RegularItalic
 */
 * {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
 body {
@@ -146,6 +149,8 @@ body #wrap {
   margin: 0 auto;
 }
 body #wrap header a#logo {
+  position: fixed;
+  padding: 100px;
   background: url('../assets/aok.svg') no-repeat;
   display: block;
   width: 40px;
@@ -158,6 +163,11 @@ body #wrap a {
 body #wrap i {
   font: 1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif;
 }
-body #wrap h1 {
+body #wrap h1,
+body #wrap h2,
+body #wrap h3,
+body #wrap h4,
+body #wrap h5,
+body #wrap h6 {
   font: 1.5em/2em "AdelleSans-Bold", Arial, sans-serif;
 }
