--- a/style.less
+++ b/style.less
@@ -59,12 +59,13 @@ RooneyWeb-RegularItalic
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:#FF5252;
 
-#wrap { width:1200px; margin: 0 auto; 
+#wrap { width:1000px; margin: 0 auto; 
 
 	header { 
-		a#logo { position:fixed; padding: 100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
+		a#logo { position:fixed; left:150px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
+	article { margin-left: 300px; }
 
 	// Globular
 	a { color:#000; }
