--- a/style.less
+++ b/style.less
@@ -62,7 +62,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 #wrap { width:1000px; margin: 0 auto; 
 
 	header { 
-		a#logo { position:fixed; left:150px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
+		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
 	article { margin-left: 300px; }
