--- a/style.less
+++ b/style.less
@@ -69,8 +69,9 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 
 	// Globular
 	a { color:#000; }
-	i { font:1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif; }
-	h1, h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
+	i, em { font:1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif; }
+	strong, b { font:1.2em/1.7em "RooneyWeb-Regular", Georgia, serif; }
+		h1, h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 
 }
