--- a/style.less
+++ b/style.less
@@ -71,7 +71,8 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	a { color:#000; }
 	i, em { font:1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif; }
 	strong, b { font:1.2em/1.7em "RooneyWeb-Regular", Georgia, serif; }
-		h1, h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
+		h1 { font:2em/2.1em "AdelleSans-Bold", Arial, sans-serif; }
+		h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 
 }
