fixed text sizes

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body #wrap header a#logo {
   position: fixed;
   margin-left: 50px;
   top: 100px;
-  background: url('./assets/aok.svg') no-repeat;
+  background: url('../assets/aok.svg') no-repeat;
   display: block;
   width: 40px;
   height: 40px;
@@ -166,11 +166,11 @@ body #wrap a {
 }
 body #wrap i,
 body #wrap em {
-  font: 1.2em/1.7em "RooneyWeb-LightItalic", Georgia, serif;
+  font-family: "RooneyWeb-LightItalic", Georgia, serif;
 }
 body #wrap strong,
 body #wrap b {
-  font: 1.2em/1.7em "RooneyWeb-Regular", Georgia, serif;
+  font-family: "RooneyWeb-Regular", Georgia, serif;
 }
 body #wrap h1 {
   font: 2em/2.1em "AdelleSans-Bold", Arial, sans-serif;
