--- a/style.css
+++ b/style.css
@@ -128,10 +128,12 @@ table {
 }
 /* A-ok Notes by @smngy
 
+RooneySansWeb-MediumItalic
 RooneyWeb-Light
+AdelleSans-Bold
+RooneySansWeb-Medium
 RooneyWeb-LightItalic
-RooneyWeb-Regular
-RooneyWeb-RegularItalic
+
 */
 * {
   -moz-box-sizing: border-box;
