--- a/style.less
+++ b/style.less
@@ -49,10 +49,12 @@ table {
 
 /* A-ok Notes by @smngy
 
+RooneySansWeb-MediumItalic
 RooneyWeb-Light
+AdelleSans-Bold
+RooneySansWeb-Medium
 RooneyWeb-LightItalic
-RooneyWeb-Regular
-RooneyWeb-RegularItalic
+
 */
 
 * 		{ -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-font-smoothing: antialiased; }
