--- a/style.less
+++ b/style.less
@@ -79,6 +79,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		h1 { font:2em/2.1em "AdelleSans-Bold", Arial, sans-serif; }
 		h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
+	a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
 
 }
 
