--- a/style.css
+++ b/style.css
@@ -165,6 +165,27 @@ body #wrap header a#logo {
 body #wrap article {
   margin-left: 300px;
 }
+body #wrap footer {
+  margin-left: 300px;
+  height: 300px;
+  padding: 40px;
+  border-top: 1px dotted #f2f2f2;
+}
+body #wrap footer a.aok {
+  font-family: "AdelleSans-Bold", Arial, sans-serif;
+  text-decoration: none;
+  border-bottom: 1px dotted #999;
+}
+body #wrap footer p {
+  color: #e6e6e6;
+  -webkit-transition: all ease 0.2s;
+  -moz-transition: all ease 0.2s;
+  -o-transition: all ease 0.2s;
+  transition: all ease 0.2s;
+}
+body #wrap footer:hover p {
+  color: #999999;
+}
 body #wrap a {
   color: #000;
 }
@@ -190,9 +211,4 @@ body #wrap h4,
 body #wrap h5,
 body #wrap h6 {
   font: 1.5em/2em "AdelleSans-Bold", Arial, sans-serif;
-}
-body #wrap a.aok {
-  font-family: "AdelleSans-Bold", Arial, sans-serif;
-  text-decoration: none;
-  border-bottom: 1px dotted #999;
 }
