--- a/style.less
+++ b/style.less
@@ -59,6 +59,14 @@ AdelleSans-Bold
 --
 */
 
+.animate(@a, @b, @c) {
+	-webkit-transition:@a @b @c;
+	-moz-transition:@a @b @c;
+	-o-transition:@a @b @c;
+	transition:@a @b @c;
+}
+
+
 * 		{ -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -webkit-font-smoothing: antialiased; }
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:#FF5252;
@@ -69,7 +77,23 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
-	article { margin-left: 300px; }
+	article { margin-left: 300px; 
+
+	}
+
+	footer { margin-left: 300px; height:300px; padding: 40px; border-top: 1px dotted #f2f2f2;
+		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
+		p { color:#e6e6e6; .animate(all, ease, .2s); }
+	}
+	footer:hover {
+		p { color:#999999; }
+	}
+
+
+
+
+
+
 
 	// Globular
 	a { color:#000; }
@@ -78,8 +102,6 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	em strong, strong em { font-family: "RooneyWeb-MediumItalic", Georgia, serif; }
 		h1 { font:2em/2.1em "AdelleSans-Bold", Arial, sans-serif; }
 		h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
-
-	a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
 
 }
 
