--- a/style.less
+++ b/style.less
@@ -81,9 +81,9 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 
 	}
 
-	footer { margin-left: 300px; height:300px; padding: 40px; border-top: 1px dotted #f2f2f2;
+	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 3px dotted #f2f2f2;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
-		p { color:#e6e6e6; .animate(all, ease, .2s); }
+		p { color:#d3d3d3; .animate(all, ease, .2s); }
 	}
 	footer:hover {
 		p { color:#999999; }
