--- a/style.less
+++ b/style.less
@@ -77,11 +77,14 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
-	article { margin-left: 300px; 
+	article.post { margin: 150px 300px 0 300px; 
+		a {}
+		h1 {}
+		div.date {}
 
 	}
 
-	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 3px dotted #f2f2f2;
+	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
 		p { color:#d3d3d3; .animate(all, ease, .2s); }
 	}
