--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ body #wrap header a#logo {
 }
 body #wrap article.post {
   margin: 100px 300px 0 300px;
+  padding: 0 0 50px 0;
 }
 body #wrap article.post a {
   -webkit-transition: all ease 0.2s;
@@ -216,7 +217,7 @@ body #wrap strong em {
   font-family: "RooneyWeb-MediumItalic", Georgia, serif;
 }
 body #wrap h1 {
-  font: 2em/2.1em "AdelleSans-Bold", Arial, sans-serif;
+  font: 2em/1.5em "AdelleSans-Bold", Arial, sans-serif;
 }
 body #wrap h2,
 body #wrap h3,
