--- a/style.less
+++ b/style.less
@@ -77,7 +77,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
-	article.post { margin: 100px 300px 0 300px; 
+	article.post { margin: 100px 300px 0 300px; padding: 0 0 50px 0; 
 		a { .animate(all, ease, .2s); }
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
@@ -104,7 +104,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	i, em { font-family: "RooneyWeb-LightItalic", Georgia, serif; font-style: normal; }
 	b, strong { font-family: "RooneyWeb-Medium", Georgia, serif; }
 	em strong, strong em { font-family: "RooneyWeb-MediumItalic", Georgia, serif; }
-		h1 { font:2em/2.1em "AdelleSans-Bold", Arial, sans-serif; }
+		h1 { font:2em/1.5em "AdelleSans-Bold", Arial, sans-serif; }
 		h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 }
