--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ body #wrap article.post h1 {
 body #wrap footer {
   margin-left: 300px;
   height: 300px;
+  max-width: 500px;
   padding: 40px 0;
   border-top: 1px dotted #d3d3d3;
 }
