--- a/style.less
+++ b/style.less
@@ -85,7 +85,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 
 	}
 
-	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
+	footer { margin-left: 300px; height:300px; max-width:500px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
 		p { color:#d3d3d3; .animate(all, ease, .2s); }
 	}
@@ -104,8 +104,8 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	i, em { font-family: "RooneyWeb-LightItalic", Georgia, serif; font-style: normal; }
 	b, strong { font-family: "RooneyWeb-Medium", Georgia, serif; }
 	em strong, strong em { font-family: "RooneyWeb-MediumItalic", Georgia, serif; }
-		h1 { font:2em/1.5em "AdelleSans-Bold", Arial, sans-serif; }
-		h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
+	h1 { font:2em/1.5em "AdelleSans-Bold", Arial, sans-serif; }
+	h2, h3, h4, h5, h6 { font:1.5em/2em "AdelleSans-Bold", Arial, sans-serif; }
 
 }
 
