--- a/style.less
+++ b/style.less
@@ -71,7 +71,7 @@ AdelleSans-Bold
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:@red;
 
-#wrap { width:1000px; margin: 0 auto; 
+#wrap { width:800px; margin: 0 auto; 
 
 	header { 
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
@@ -85,7 +85,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 
 	}
 
-	footer { margin-left: 300px; height:300px; max-width:500px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
+	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; }
 		p { color:#d3d3d3; .animate(all, ease, .2s); }
 	}
