--- a/style.less
+++ b/style.less
@@ -77,12 +77,14 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
-	article.post { margin: 100px 300px 0 300px; padding: 0 0 50px 0; 
+	article.post { margin: 100px 0 0 300px; padding: 0 0 50px 0; 
 		a { .animate(all, ease, .2s); }
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
-		div.date {}
-
+		div.date { color:#fff; }
+	}
+	article.post:hover { 
+		div.date { color:@red; }
 	}
 
 	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
