--- a/style.less
+++ b/style.less
@@ -81,7 +81,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a { .animate(all, ease, .2s); }
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
-		div.date { color:#fff; }
+		div.date { color:#fff; .animate(all, ease, .2s); }
 	}
 	article.post:hover { 
 		div.date { color:@red; }
@@ -102,7 +102,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 
 
 	// Globular
-	a { color:#000; }
+	a { color:#000; text-decoration: none; }
 	i, em { font-family: "RooneyWeb-LightItalic", Georgia, serif; font-style: normal; }
 	b, strong { font-family: "RooneyWeb-Medium", Georgia, serif; }
 	em strong, strong em { font-family: "RooneyWeb-MediumItalic", Georgia, serif; }
