--- a/style.less
+++ b/style.less
@@ -71,13 +71,13 @@ AdelleSans-Bold
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:@red;
 
-#wrap { width:800px; margin: 0 auto; 
+#wrap { width:800px; margin: 100px auto; 
 
 	header { 
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
 	}
 
-	article.post { margin: 100px 0 0 300px; padding: 0 0 50px 0; 
+	article.post { margin: 0 0 0 300px; padding: 0 0 50px 0; 
 		a { .animate(all, ease, .2s); }
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
