footer link hover style

--- a/style.css
+++ b/style.css
@@ -211,6 +211,9 @@ body #wrap footer p {
   -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
 }
+body #wrap footer a:hover {
+  border: 1px dotted #999;
+}
 body #wrap footer:hover a.aok {
   color: #ff5252;
 }
