--- a/style.less
+++ b/style.less
@@ -90,6 +90,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; .animate(all, ease, .2s); }
 		p { color:#d3d3d3; .animate(all, ease, .2s); }
+		a:hover { border:1px dotted #999; }
 	}
 	footer:hover {
 		a.aok { color:@red; }
