--- a/style.less
+++ b/style.less
@@ -82,6 +82,9 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
+		ul {
+			li { display: inline; text-transform: Capitalize; }
+		}
 	}
 	article.post:hover { 
 		div.date { color:@red; }
