--- a/style.less
+++ b/style.less
@@ -83,7 +83,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
 		ul {
-			li { display: inline; text-transform: Capitalize; }
+			li { display: inline; text-transform: inherit; padding: 0 10px 0 0; font-size: .8em; }
 		}
 	}
 	article.post:hover { 
