--- a/style.less
+++ b/style.less
@@ -82,8 +82,10 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
-		ul {
-			li { display: inline; text-transform: inherit; padding: 0 10px 0 0; font-size: .8em; }
+		ul { 
+			li { display: inline; padding: 0 10px 0 0; font-size: .8em; 
+				a { color:#999;  text-transform: capitalize; }
+			}
 		}
 	}
 	article.post:hover { 
@@ -97,7 +99,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	}
 	footer:hover {
 		a.aok { color:@red; }
-		p { color:#999999; }
+		p { color:#999; }
 	}
 
 
