--- a/style.less
+++ b/style.less
@@ -83,8 +83,8 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
 		ul { 
-			li { display: inline; padding: 0 10px 0 0; font-size: .8em; 
-				a { color:#999;  text-transform: capitalize; }
+			li { display: inline; padding: 0 10px 0 0; font-size: .7em; 
+				a { color:#999;  text-transform: uppercase; letter-spacing: 1px; }
 			}
 		}
 	}
