--- a/style.less
+++ b/style.less
@@ -87,6 +87,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 				a { color:#999;  text-transform: uppercase; letter-spacing: 1px; }
 			}
 		}
+		p { margin-bottom: 30px; }
 	}
 	article.post:hover { 
 		div.date { color:@red; }
