--- a/style.css
+++ b/style.css
@@ -186,6 +186,9 @@ body #wrap article.post div.date {
   -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
 }
+body #wrap article.post ul {
+  margin: 30px 0;
+}
 body #wrap article.post ul li {
   display: inline;
   padding: 0 10px 0 0;
