--- a/style.less
+++ b/style.less
@@ -82,7 +82,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		a:hover { color:@red; }
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
-		ul { 
+		ul { margin:30px 0;
 			li { display: inline; padding: 0 10px 0 0; font-size: .7em; 
 				a { color:#999;  text-transform: uppercase; letter-spacing: 1px; }
 			}
