--- a/style.less
+++ b/style.less
@@ -71,7 +71,7 @@ AdelleSans-Bold
 
 body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; color:@red;
 
-#wrap { width:800px; margin: 100px auto; 
+#wrap { width:900px; margin: 100px auto; 
 
 	header { 
 		a#logo { position:fixed; margin-left:50px; top:100px; background: url('../assets/aok.svg') no-repeat; display: block; width: 40px; height:40px; text-indent: -9999px; }
@@ -93,9 +93,9 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 		div.date { color:@red; }
 	}
 
-	footer { margin-left: 300px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
+	footer { margin-left: 400px; height:300px; padding: 40px 0; border-top: 1px dotted #d3d3d3;
 		a.aok { font-family: "AdelleSans-Bold", Arial, sans-serif; text-decoration: none; border-bottom:1px dotted #999; .animate(all, ease, .2s); }
-		p { color:#d3d3d3; .animate(all, ease, .2s); }
+		p { color:#d3d3d3; .animate(all, ease, .2s); margin-bottom: 30px; }
 		a:hover { border-bottom:1px dotted #999; }
 	}
 	footer:hover {
