--- a/style.css
+++ b/style.css
@@ -202,6 +202,11 @@ body #wrap article.post ul li a {
 body #wrap article.post p {
   margin-bottom: 30px;
 }
+body #wrap article.post span.home {
+  padding: 5px;
+  font-size: 2em;
+  margin-left: -30px;
+}
 body #wrap article.post:hover div.date {
   color: #ff5252;
 }
