--- a/style.less
+++ b/style.less
@@ -87,7 +87,7 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 			}
 		}
 		p { margin-bottom: 30px; }
-		span.home { padding: 5px 10px; font-size: 2em; margin-left: -40px; }
+		span.home { padding: 0 10px; font-size: 2em; line-height: 1em; margin-left: -45px; }
 	}
 	article.post:hover { 
 		div.date { color:@red; }
