--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body #wrap article.post p {
   margin-bottom: 30px;
 }
 body #wrap article.post span.home {
-  padding: 0 10px;
+  padding: 10px;
   font-size: 2em;
   line-height: 0em;
   display: inline-block;
