--- a/style.css
+++ b/style.css
@@ -202,6 +202,9 @@ body #wrap article.post ul li a {
 body #wrap article.post p {
   margin-bottom: 30px;
 }
+body #wrap article.post p.excerpt {
+  margin-bottom: 0px;
+}
 body #wrap article.post span.home {
   padding: 7px;
   font-size: 1.5em;
