--- a/style.less
+++ b/style.less
@@ -77,8 +77,8 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	}
 
 	article.post { margin: 0 0 0 300px; padding: 0 0 50px 0; 
-		a { .animate(all, ease, .2s); }
-		a:hover { color:@red; }
+		a { .animate(all, ease, .2s); color: @red; border-bottom: 1px dotted #999; }
+		a:hover { border-bottom: 1px dotted @red; }
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
 		ul { margin:30px 0;
