link styling fixes

--- a/style.css
+++ b/style.css
@@ -188,6 +188,9 @@ body #wrap article.post div.date {
   -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
 }
+body #wrap article.post div.date a {
+  border: none;
+}
 body #wrap article.post ul {
   margin: 30px 0;
 }
@@ -216,6 +219,10 @@ body #wrap article.post span.home {
 }
 body #wrap article.post:hover div.date {
   color: #ff5252;
+}
+body #wrap article.post:hover div.date a {
+  color: #ff5252;
+  border: none;
 }
 body #wrap footer {
   margin-left: 300px;
