--- a/style.css
+++ b/style.css
@@ -188,9 +188,6 @@ body #wrap article.post div.date {
   -o-transition: all ease 0.2s;
   transition: all ease 0.2s;
 }
-body #wrap article.post div.date a {
-  border: none;
-}
 body #wrap article.post ul {
   margin: 30px 0;
 }
@@ -203,6 +200,7 @@ body #wrap article.post ul li a {
   color: #999;
   text-transform: uppercase;
   letter-spacing: 1px;
+  border: none;
 }
 body #wrap article.post p {
   margin-bottom: 30px;
@@ -220,9 +218,9 @@ body #wrap article.post span.home {
 body #wrap article.post:hover div.date {
   color: #ff5252;
 }
-body #wrap article.post:hover div.date a {
-  color: #ff5252;
+body #wrap article.post:hover ul li a {
   border: none;
+  color: #ff5252;
 }
 body #wrap footer {
   margin-left: 300px;
