--- a/style.less
+++ b/style.less
@@ -77,8 +77,11 @@ body { background: #fff; font:1.2em/1.7em "RooneyWeb-Light", Georgia, serif; col
 	}
 
 	article.post { margin: 0 0 0 300px; padding: 0 0 50px 0; 
-		a { .animate(all, ease, .2s); color: darken(@red, 10%); border-bottom: 1px dotted #999; }
+		a { .animate(all, ease, .2s); color: darken(@red, 20%); border-bottom: 1px dotted #999; }
 		a:hover { border-bottom: 1px dotted @red; }
+		a.back { border:none; }
+		a.back:hover { border:none; color:#333;}
+		
 		h1 { margin: 0; padding: 0; }
 		div.date { color:#fff; .animate(all, ease, .2s); }
 		ul { margin:30px 0;
